<?xml version="1.0"?>
<package>
  <name>thorp_navigation</name>
  <version>0.1.0</version>
  <description>
   The thorp_navigation provides Thorp's navigation configuration and special-purpose nodes.
  </description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>thorp_msgs</build_depend>
  <build_depend>thorp_toolkit</build_depend>
  <build_depend>visp_ros</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>thorp_msgs</run_depend>
  <run_depend>thorp_toolkit</run_depend>
  <run_depend>visp_ros</run_depend>
</package>
