<?xml version="1.0"?>
<package format="2">
  <name>thorp_navigation</name>
  <version>0.1.0</version>
  <description>
   The thorp_navigation provides Thorp's navigation configuration and special-purpose nodes.
  </description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>thorp_msgs</depend>
  <depend>thorp_toolkit</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>visualization_msgs</depend>
  <depend>mbf_msgs</depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>move_slow_and_clear</exec_depend>
  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>range_sensor_layer</exec_depend>
  <exec_depend>turtlebot_navigation</exec_depend>
  <exec_depend>thorp_costmap_layers</exec_depend>
</package>
