<?xml version="1.0"?>
<package>
  <name>thorp_obj_rec</name>
  <version>0.1.0</version>
  <description>Thorp-specific launchers and configuration for the object recognition tools</description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_obj_rec</url> 

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>thorp_bringup</run_depend>
  <run_depend>object_recognition_ros</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>object_recognition_tabletop</run_depend>
</package>