<?xml version="1.0"?>
<package>
  <name>thorp_obj_rec</name>
  <version>0.1.0</version>
  <description>Thorp-specific launchers and configuration for the object recognition tools</description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_obj_rec</url> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>

  <build_depend>thorp_msgs</build_depend>
  <build_depend>thorp_toolkit</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>

  <run_depend>thorp_msgs</run_depend>
  <run_depend>thorp_toolkit</run_depend>

  <run_depend>object_recognition_ros</run_depend>
  <run_depend>object_recognition_tabletop</run_depend>
</package>